--- a/sources/api/netdog/Cargo.toml
+++ b/sources/api/netdog/Cargo.toml
@@ -28,4 +28,4 @@ toml = { version = "0.5", features = ["preserve_order"] }
 tempfile = "3.2.0"
 
 [build-dependencies]
-cargo-readme = "3.1"
+generate-readme = { version = "0.1", path = "../../generate-readme" }
