--- a/sources/api/datastore/Cargo.toml
+++ b/sources/api/datastore/Cargo.toml
@@ -19,7 +19,7 @@ snafu = "0.7"
 walkdir = "2.2"
 
 [build-dependencies]
-cargo-readme = "3.1"
+generate-readme = { version = "0.1", path = "../../generate-readme" }
 
 [dev-dependencies]
 maplit = "1.0"
