--- a/sources/cfsignal/Cargo.toml
+++ b/sources/cfsignal/Cargo.toml
@@ -20,4 +20,4 @@ imdsclient = { path = "../imdsclient", version = "0.1.0" }
 hyper = "0.14.2"
 
 [build-dependencies]
-cargo-readme = "3.1"
+generate-readme = { version = "0.1", path = "../generate-readme" }
