--- a/sources/driverdog/Cargo.toml
+++ b/sources/driverdog/Cargo.toml
@@ -18,4 +18,4 @@ tempfile = "3.2.0"
 toml = "0.5.8"
 
 [build-dependencies]
-cargo-readme = "3.1"
+generate-readme = { version = "0.1", path = "../generate-readme" }
