--- a/sources/growpart/Cargo.toml
+++ b/sources/growpart/Cargo.toml
@@ -16,4 +16,4 @@ block-party = { path = "../updater/block-party", version = "0.1.0" }
 inotify = "0.10"
 
 [build-dependencies]
-cargo-readme = "3.1"
+generate-readme = { version = "0.1", path = "../generate-readme" }
