--- a/sources/logdog/Cargo.toml
+++ b/sources/logdog/Cargo.toml
@@ -26,4 +26,4 @@ url = "2.1.1"
 walkdir = "2.3"
 
 [build-dependencies]
-cargo-readme = "3.1"
+generate-readme = { version = "0.1", path = "../generate-readme" }
