standardize variant concepts
We had several crates that interpreted the VARIANT env variable in
different ways in build.rs. This standardizes the treatment of the
VARIANT variable by centralizing it in a library.

--- a/sources/api/early-boot-config/Cargo.toml
+++ b/sources/api/early-boot-config/Cargo.toml
@@ -33,6 +33,7 @@ toml = "0.5"
 vmw_backdoor = "0.2"
 
 [build-dependencies]
+bottlerocket-variant = { version = "0.1", path = "../../bottlerocket-variant" }
 generate-readme = { version = "0.1", path = "../../generate-readme" }
 
 [dev-dependencies]
