kubelet, containerd: set container runtime socket to 'containerd.sock'
This changes containerd's container runtime socket to '/run/containerd/containerd.sock'
from '/run/dockershim.sock'.

This change reverts changes done in https://github.com/bottlerocket-os/bottlerocket/pull/796

More K8s deployments are now containerd-aware so customers are having to
do daemonset edits for solutions that assume containerd as the
underlying runtime.

In the containerd systemd service, we create a symlink for the
containerd socket at `/run/dockershim.sock` just so other deployments
that assume docker as underlying runtime can still work.

--- a/packages/containerd/containerd.service
+++ b/packages/containerd/containerd.service
@@ -8,6 +8,8 @@ Wants=network-online.target configured.target
 Slice=runtime.slice
 EnvironmentFile=/etc/network/proxy.env
 EnvironmentFile=-/etc/containerd/nvidia.env
+# We symlink the containerd socket for IPAMD which looks for dockershim.sock
+ExecStartPre=/bin/ln -sf /run/containerd/containerd.sock /run/dockershim.sock
 ExecStart=/usr/bin/containerd
 Type=notify
 Delegate=yes
