migrations: add migration for `settings.kubernetes.cluster-dns-ip`

--- a/Release.toml
+++ b/Release.toml
@@ -122,4 +122,5 @@ version = "1.7.2"
     "migrate_v1.8.0_add-autoscaling.lz4",
     "migrate_v1.8.0_etc-hosts.lz4",
     "migrate_v1.8.0_etc-hosts-metadata.lz4",
+    "migrate_v1.8.0_cluster-dns-ip-list.lz4",
 ]
