--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -55,6 +55,7 @@ members = [
     "api/migration/migrations/v1.8.0/add-autoscaling",
     "api/migration/migrations/v1.8.0/etc-hosts",
     "api/migration/migrations/v1.8.0/etc-hosts-metadata",
+    "api/migration/migrations/v1.8.0/cluster-dns-ip-list",
 
     "bottlerocket-release",
 
