--- a/variants/aws-ecs-1-nvidia/Cargo.toml
+++ b/variants/aws-ecs-1-nvidia/Cargo.toml
@@ -12,6 +12,8 @@ os-image-size-gib = 4
 kernel-parameters = [
     "console=tty0",
     "console=ttyS0,115200n8",
+    "net.ifnames=0",
+    "netdog.default-interface=eth0:dhcp4,dhcp6?"
 ]
 included-packages = [
 # core
