migrations: migrate new 'settings.kubernetes.provider-id'
We added a new setting for configuring kubelet's provider-id option.

--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -57,6 +57,7 @@ members = [
     "api/migration/migrations/v1.8.0/etc-hosts-metadata",
     "api/migration/migrations/v1.8.0/cluster-dns-ip-list",
     "api/migration/migrations/v1.8.0/pki-affected-services",
+    "api/migration/migrations/v1.8.0/kubelet-provider-id",
 
     "bottlerocket-release",
 
