--- a/variants/Cargo.toml
+++ b/variants/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "aws-ecs-1",
     "aws-ecs-1.1",
     "aws-ecs-1-nvidia",
+    "aws-ecs-1.1-nvidia",
     "aws-k8s-1.19",
     "aws-k8s-1.20",
     "aws-k8s-1.21",
