shibaken: Allow querying for the AWS partition
This commit moves prior shibaken functionality to generate admin
container userdata to a subcommand.

--- a/sources/api/shibaken/Cargo.toml
+++ b/sources/api/shibaken/Cargo.toml
@@ -10,6 +10,7 @@ build = "build.rs"
 exclude = ["README.md"]
 
 [dependencies]
+argh = "0.1.8"
 base64 = "0.13"
 imdsclient = { path = "../../imdsclient", version = "0.1.0" }
 log = "0.4"
