migrations: add send-metrics setting-generator
AWS variants now generate the `settings.metrics.send-metrics` setting
based on partition information gathered from shibaken.

--- a/Release.toml
+++ b/Release.toml
@@ -133,4 +133,5 @@ version = "1.8.0"
 "(1.8.0, 1.9.0)" = [
     "migrate_v1.9.0_ntp-affected-services.lz4",
     "migrate_v1.9.0_shibaken-admin-userdata-semantics.lz4",
+    "migrate_v1.9.0_shibaken-send-metrics.lz4",
 ]
