--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -63,6 +63,7 @@ members = [
     "api/migration/migrations/v1.8.0/public-control-container-v0-6-1",
     "api/migration/migrations/v1.9.0/ntp-affected-services",
     "api/migration/migrations/v1.9.0/shibaken-admin-userdata-semantics",
+    "api/migration/migrations/v1.9.0/shibaken-send-metrics",
 
     "bottlerocket-release",
 
