kernel: Only build metal specific drivers for metal variants
Adjust kernel spec files to only merge `config-bottlerocket-metal`
config fragment when the variant contains the substring `metal`. To
make this work we need to force a rebuild of the kernel for each variant
by setting the `variant-sensitive` option.

Signed-off-by: Leonard Foerster <foersleo@amazon.com>

--- a/packages/kernel-5.10/Cargo.toml
+++ b/packages/kernel-5.10/Cargo.toml
@@ -6,6 +6,7 @@ publish = false
 build = "build.rs"
 
 [package.metadata.build-package]
+variant-sensitive = true
 package-name = "kernel-5.10"
 
 [lib]
