--- a/Release.toml
+++ b/Release.toml
@@ -130,3 +130,6 @@ version = "1.8.0"
     "migrate_v1.8.0_public-admin-container-v0-9-0.lz4",
     "migrate_v1.8.0_public-control-container-v0-6-1.lz4",
 ]
+"(1.8.0, 1.9.0)" = [
+    "migrate_v1.9.0_ntp-affected-services.lz4",
+]
