--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -61,6 +61,7 @@ members = [
     "api/migration/migrations/v1.8.0/aws-control-container-v0-6-1",
     "api/migration/migrations/v1.8.0/public-admin-container-v0-9-0",
     "api/migration/migrations/v1.8.0/public-control-container-v0-6-1",
+    "api/migration/migrations/v1.9.0/ntp-affected-services",
 
     "bottlerocket-release",
 
