--- a/variants/vmware-k8s-1.23/Cargo.toml
+++ b/variants/vmware-k8s-1.23/Cargo.toml
@@ -21,6 +21,7 @@ kernel-parameters = [
     "crashkernel=2G-:256M",
     "net.ifnames=0",
     "netdog.default-interface=eth0:dhcp4,dhcp6?",
+    "quiet",
 ]
 grub-features = [
     "set-private-var"
