--- a/variants/aws-k8s-1.22/Cargo.toml
+++ b/variants/aws-k8s-1.22/Cargo.toml
@@ -23,6 +23,7 @@ kernel-parameters = [
     "console=ttyS0,115200n8",
     "net.ifnames=0",
     "netdog.default-interface=eth0:dhcp4,dhcp6?",
+    "quiet",
 ]
 
 [lib]
