migrations: update restart commands for kubelet
Remove the unnecessary `systemctl daemon-reload` command on upgrade,
and restore it on downgrade.

Signed-off-by: Ben Cressey <bcressey@amazon.com>

--- a/Release.toml
+++ b/Release.toml
@@ -135,4 +135,5 @@ version = "1.8.0"
     "migrate_v1.9.0_shibaken-admin-userdata-semantics.lz4",
     "migrate_v1.9.0_shibaken-send-metrics.lz4",
     "migrate_v1.9.0_image-gc-thresholds.lz4",
+    "migrate_v1.9.0_kubelet-no-daemon-reload.lz4",
 ]
