--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -65,6 +65,7 @@ members = [
     "api/migration/migrations/v1.9.0/shibaken-admin-userdata-semantics",
     "api/migration/migrations/v1.9.0/shibaken-send-metrics",
     "api/migration/migrations/v1.9.0/image-gc-thresholds",
+    "api/migration/migrations/v1.9.0/kubelet-no-daemon-reload",
 
     "bottlerocket-release",
 
