migrations: add targets-base-url setting-generator
AWS variants now generate the `settings.updates.targets-base-url`
setting based on region.

--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -68,6 +68,7 @@ members = [
     "api/migration/migrations/v1.9.0/kernel-modules-setting",
     "api/migration/migrations/v1.9.0/kernel-modules-setting-metadata",
     "api/migration/migrations/v1.9.0/kubelet-no-daemon-reload",
+    "api/migration/migrations/v1.9.0/updates-targets-base-url",
 
     "bottlerocket-release",
 
