--- a/Release.toml
+++ b/Release.toml
@@ -138,4 +138,5 @@ version = "1.8.0"
     "migrate_v1.9.0_kernel-modules-setting.lz4",
     "migrate_v1.9.0_kernel-modules-setting-metadata.lz4",
     "migrate_v1.9.0_kubelet-no-daemon-reload.lz4",
+    "migrate_v1.9.0_updates-targets-base-url.lz4",
 ]
