Add autoscaling.should-wait setting to k8s variants
Add autoscaling.should-wait setting to k8s variants. Set default
value to false. Define path for config file and template for setting
value parsed by hachiko helper program.

--- a/sources/models/shared-defaults/kubernetes-aws.toml
+++ b/sources/models/shared-defaults/kubernetes-aws.toml
@@ -21,3 +21,11 @@ service-checks = ["apiserver", "chronyd", "containerd", "host-containerd", "kube
 
 [metadata.settings.network]
 affected-services = ["containerd", "kubernetes", "host-containerd", "host-containers"]
+
+# AutoScaling
+[settings.autoscaling]
+should-wait = false
+
+[configuration-files.hachiko-toml]
+path = "/etc/hachiko.toml"
+template-path = "/usr/share/templates/hachiko-toml"
