Handle migrations for autoscaling.should-wait
Handle adding autoscaling.should-wait setting in v1.10.0 and removing setting in case of
bottlerocket version downgrade.

--- a/Release.toml
+++ b/Release.toml
@@ -146,3 +146,6 @@ version = "1.10.0"
     "migrate_v1.10.0_dns-settings.lz4",
     "migrate_v1.10.0_dns-settings-metadata.lz4",
 ]
+"(1.9.1, 1.10.0)" = [
+    "migrate_v1.10.0_add-eks-autoscaling.lz4",
+]
