Increase inotify default limits
We have had several reports from users that the inotify limits
(fs.inotify.max_user_instances and fs.inotify.max_user_watches) are too
low for their workloads, causing them to get errors when deploying pods.

Also bumping up vm.max_map_count so all three settings match what is
currently used for Amazon Linux to make sure we have a consistent
experience.

The user data settings can be used to raise (or lower) these defaults if
an end user needs to fine tune their settings.

Signed-off-by: Sean McGinnis <stmcg@amazon.com>

--- a/packages/release/release-sysctl.conf
+++ b/packages/release/release-sysctl.conf
@@ -58,3 +58,7 @@ kernel.unprivileged_bpf_disabled = 1
 
 # Turn on BPF JIT hardening, if the JIT is enabled.
 net.core.bpf_jit_harden = 2
+
+# Increase inotify limits to allow for a greater number of containers
+fs.inotify.max_user_instances = 8192
+fs.inotify.max_user_watches = 524288
