Increase vm.max_map_count to match AL2 setting
This increases the vm.max_map_count to match the value configured in
Amazon Linux so we have a consistent value and user experience across AL
and Bottlerocket.

Signed-off-by: Sean McGinnis <stmcg@amazon.com>

--- a/packages/release/release-sysctl.conf
+++ b/packages/release/release-sysctl.conf
@@ -62,3 +62,6 @@ net.core.bpf_jit_harden = 2
 # Increase inotify limits to allow for a greater number of containers
 fs.inotify.max_user_instances = 8192
 fs.inotify.max_user_watches = 524288
+
+# Increase virtual memory to allow for larger workloads
+vm.max_map_count = 524288
